--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,12 @@
 			<artifactId>javax.servlet-api</artifactId>
 			<version>3.1.0</version>
 		</dependency>
+		
+		<dependency>
+		    	<groupId>com.github.anandAmitBabul</groupId>
+		    	<artifactId>spring-rest-demo</artifactId>
+		    	<version>1.1.0</version>
+		</dependency>
 				 
 	</dependencies>
 
