--- a/pom.xml
+++ b/pom.xml
@@ -63,6 +63,9 @@
 			    <executions>
 				    <execution>
 					<phase>package</phase>
+					    <goals>
+						    <goal>copy</goal>
+						</goals>
 					<configuration>
 					    <artifactItems>
 						<artifactItem>
